fix: image visibility

--- a/assets/styles/vars/variables.sass
+++ b/assets/styles/vars/variables.sass
@@ -32,7 +32,7 @@ $lineheight-serif-h1: 1.111em
 
 // COLORS
 $color-support: green
-$border: 1px solid green
+$border: 1px solid red
 
 // FONTS
 $serif: 'Signifier',Georgia,Garamond,Times,serif
